--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -3,40 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:context=".StudentItem">
 
     <ImageView
         android:id="@+id/studentPic"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/ic_student_pic"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 
     <TextView
         android:id="@+id/studentName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
         android:text="Student Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/studentPic"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="John Doe" />
 
     <TextView
         android:id="@+id/studentId"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="123456789"
         app:layout_constraintStart_toStartOf="@id/studentName"
-        app:layout_constraintTop_toBottomOf="@id/studentName" />
+        app:layout_constraintTop_toBottomOf="@id/studentName"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="ID"
+        tools:text="12345"/>
 
     <CheckBox
         android:id="@+id/studentCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Check"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/studentName"
         app:layout_constraintTop_toBottomOf="@id/studentId"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
