--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,42 +14,49 @@
         android:src="@drawable/ic_student_pic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-
-    <TextView
-        android:id="@+id/studentName"
-        android:layout_width="110dp"
-        android:layout_height="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:text="Student Name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/studentPic"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="John Doe" />
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp" />
 
-    <TextView
-        android:id="@+id/studentId"
+    <LinearLayout
+        android:id="@+id/textGroup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/studentName"
-        app:layout_constraintTop_toBottomOf="@id/studentName"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="ID"
-        tools:text="12345"/>
+        android:orientation="vertical"
+        app:layout_constraintStart_toEndOf="@id/studentPic"
+        app:layout_constraintTop_toTopOf="@id/studentPic"
+        app:layout_constraintBottom_toBottomOf="@id/studentPic"
+        app:layout_constraintEnd_toStartOf="@id/studentCheckBox"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+        <TextView
+            android:id="@+id/studentName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Student Name"
+            tools:text="John Doe"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+        <TextView
+            android:id="@+id/studentId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ID"
+            tools:text="12345"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+    </LinearLayout>
 
     <CheckBox
         android:id="@+id/studentCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Check"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/studentName"
-        app:layout_constraintTop_toBottomOf="@id/studentId"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_marginEnd="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
